fix: prevent page from shifting when scrollbar shows/hides

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+
+html {
+    /* prevents page shifting when scrollbar shows/hides */
+    margin-left: calc(100vw - 100%);
+}
